# Look-Once-More-PL

./: .gitignore  .gitmodules  CMakeLists.txt  Code.lom  GettingStarted.md  README.md  all_features.lom  build.sh  code.lom  example.lom  main.cpp
Text/: Parsing.txt  grammar.txt  ideas.txt
enum_definitions/: arguments  enum_generator.cpp  generate.sh  generate_operator.sh  generate_tokentype.sh  generator.py  operator  operator_enum_ref  operators.hpp  tokentype  tokentype_enum_ref
example/src/: main.lom
example/src/integer_sizes/: ints.lom
example/src/operators/: operators.lom
example/src/pointers/: ptrs.lom
example/src/raylib/: raylib.lom
example/src/statements/: statements.lom
src/: ToDo  ToDo.txt  arguments.cpp  arguments.hpp  debug_flags.hpp  error.cpp  error.hpp  expressions.cpp  expressions.hpp  file.hpp  firstparse.cpp  firstparse.hpp  lex.cpp  lex.hpp  parse.cpp  parse.hpp  secondparse.cpp  secondparse.hpp  settings.cpp  settings.hpp  statements.cpp  statements.hpp
src/analysis/: symbol_table.cpp  symbol_table.hpp
src/ast/: ast.cpp  ast.hpp  expressions.cpp  expressions.hpp  statements.cpp  statements.hpp  types.cpp  types.hpp
src/backends/: codegen.cpp  codegen.hpp
src/backends/llvm/: tollvm.cpp  tollvm.hpp
src/build_system/: build.cpp  build.hpp
src/grammar/: expressions.cpp  expressions.hpp  statements.cpp  statements.hpp  types.cpp  types.hpp
src/lexing/: TokenTypeGeneratorReference  lex.cpp  lex.hpp  tokenhandler.cpp  tokentype.hpp  tokenview.cpp
src/parsing/: ast.cpp  ast.hpp  firstparse.cpp  firstparse.hpp  parse.cpp  parse.hpp  secondparse.cpp  secondparse.hpp
src/peep_mir/: peep_mir.cpp  peep_mir.hpp
src/peepir/: peepir.cpp  peepir.hpp
src/semantic_analysis/: symbol_table.cpp  symbol_table.hpp  table_and_module_sync.hpp  types.cpp  types.hpp
src/utilities/: arena.hpp  assume_assert.hpp  enum_utils.hpp  general_enums.hpp  owned_ptr.hpp  releasing_vector.hpp  type_flags.hpp  typedefs.hpp  variant_overload.hpp
src/validation/: ast_validation.cpp  ast_validation.hpp  symbol_table.cpp  symbol_table.hpp
tests/: all.lom  conversions.lom  functions.lom  globals.lom  operators.lom  statements.lom
